Fixed proper english

--- a/app/views/geomems/show.html.erb
+++ b/app/views/geomems/show.html.erb
@@ -14,7 +14,7 @@
           </div>
         </div>
       </div>
-      <a id="show-link" href="#" onclick="return false;">Dont be shy, leave a comment!</a>
+      <a id="show-link" href="#" onclick="return false;">Don't be shy, leave a comment!</a>
       <div class="container comm-box">
         <div class ="p-3">
           <%= simple_form_for([ @geomem, @comment ]) do |f| %>
