Fixed space in comments

--- a/app/views/geomems/show.html.erb
+++ b/app/views/geomems/show.html.erb
@@ -41,7 +41,7 @@
                 <%else%>
                   <p class="post-date" style="color:red !important;">Posted just now</p>
                 <%end%>
-                <p><%=comment.content%></p>
+                <p style="line-height: 1.6;"><%=comment.content%></p>
               </div>
             </div>
           <%end%>
