--- a/app/views/geomems/index.html.erb
+++ b/app/views/geomems/index.html.erb
@@ -15,6 +15,8 @@
                 <p class="post-date">Posted <%=((Time.zone.now - memory.created_at)/86400).round%> days ago</p>
               <%elsif ((Time.zone.now - memory.created_at)/3600).round >= 1%>
                 <p class="post-date">Posted <%=((Time.zone.now - memory.created_at)/3600).round%> hours ago</p>
+              <%elsif ((Time.zone.now - memory.created_at)/3600).round == 1%>
+                 <p class="post-date">Posted <%=((Time.zone.now - memory.created_at)/3600).round%> hour ago</p>
               <%elsif ((Time.zone.now - memory.created_at)/60).round >= 1%>
                 <p class="post-date">Posted <%=((Time.zone.now - memory.created_at)/60).round%> minutes ago</p>
               <%else%>
