Changed og title

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 
     <meta name="description" content="Have fun storing your memories and visualize them in the map!">
     <meta property="og:description" content="Have fun storing your memories and visualize them in the map!">
-<meta property="og:title" content="Mozilla Developer Network">
+    <meta property="og:title" content="Geo-memories">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_pack_tag 'application' %>
