--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     <meta name="description" content="Have fun storing your memories and visualize them in the map!">
     <meta property="og:description" content="Have fun storing your memories and visualize them in the map!">
     <meta property="og:title" content="Geo-memories">
+    <meta property="og:image" content="https://a-static.besthdwallpaper.com/pixelated-earth-wallpaper-1920x1280-29933_38.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_pack_tag 'application' %>
