Added meta data for social media

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,23 @@
     <meta property="og:description" content="Have fun storing your memories and visualize them in the map!">
     <meta property="og:title" content="Geo-memories">
     <meta property="og:image" content="https://a-static.besthdwallpaper.com/pixelated-earth-wallpaper-1920x1280-29933_38.jpg">
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Geo-memories">
+    <meta itemprop="description" content="Have fun storing your memories and visualize them in the map!">
+    <meta itemprop="image" content="http://a-static.besthdwallpaper.com/pixelated-earth-wallpaper-1920x1280-29933_38.jpg">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="http://geo-memories.herokuapp.com/geomems">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Geo-memories">
+    <meta property="og:description" content="Have fun storing your memories and visualize them in the map!">
+    <meta property="og:image" content="http://a-static.besthdwallpaper.com/pixelated-earth-wallpaper-1920x1280-29933_38.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Geo-memories">
+    <meta name="twitter:description" content="Have fun storing your memories and visualize them in the map!">
+    <meta name="twitter:image" content="http://a-static.besthdwallpaper.com/pixelated-earth-wallpaper-1920x1280-29933_38.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_pack_tag 'application' %>
